--- a/innsbruck_rauschbrunnen.html
+++ b/innsbruck_rauschbrunnen.html
@@ -8,18 +8,24 @@
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     
-    <link rel="stylesheet" href="../js/leaflet/leaflet.css" />
-    <script src="../js/leaflet/leaflet.js"></script>
-
-    <link rel="stylesheet" href="../js/leaflet.fullscreen/dist/Leaflet.fullscreen.css" />
-    <script src="../js/leaflet.fullscreen/dist/Leaflet.fullscreen.js"></script>
-    <script src="../js/d3/d3.v3.min.js"></script>
-    <link rel="stylesheet" href="../js/leaflet.elevation/leaflet.elevation-0.0.4.css" />
-    <script type="text/javascript" src="../js/leaflet.elevation/leaflet.elevation-0.0.4.min.js"></script>
-    <script src="../js/leaflet.gpx/gpx.js"></script>
+    <link rel="stylesheet" href="../biergartenIBK.github.io/js/leaflet/leaflet.css" />
+    <script src="../biergartenIBK.github.io/js/leaflet/leaflet.js"></script>
 
     <link rel="stylesheet" href="styles.css" />
-   
+
+    <link rel="stylesheet" href="../biergartenIBK.github.io/js/leaflet.fullscreen/dist/Leaflet.fullscreen.css" />
+    <script src="../biergartenIBK.github.io/js/leaflet.fullscreen/dist/Leaflet.fullscreen.js"></script>
+
+
+    <script src="../biergartenIBK.github.io/js/leaflet.gpx/gpx.js"></script>
+
+    <script src="../biergartenIBK.github.io/js/d3/d3.v3.min.js" charset="utf-8"></script>
+
+    <link rel="stylesheet" href="../biergartenIBK.github.io/js/leaflet.elevation/leaflet.elevation-0.0.4.css" />
+    <script src="../biergartenIBK.github.io/js/leaflet.elevation/leaflet.elevation-0.0.4.min.js"></script>
+    
+    <script type="text/javascript" src="../biergartenIBK.github.io/js/leaflet.gpx/gpx.js"></script>
+
     <script defer src="rauschbrunnen.js"></script>
 
 </head>
@@ -31,10 +37,12 @@
     </div>
 
     <div class="author">
-        <img src="images/user.jpg" alt="Ihr Reiseleiter" /><!-- TODO: anpassen -->
+        <img src="images/user.jpg" alt="Ihr Reiseleiter" />
         <p class="gray">
-            <a href="mailto:christian.hofer@student.uibk.ac.at">Christian Hofer</a> -<!-- TODO: anpassen -->
-            <a href="https://sagamol.github.io/biketirol/index.html">https://sagamol.github.io/biketirol/</a><!-- TODO: anpassen -->
+            <a href="mailto:marianne.abriel@student.uibk.ac.at">Marianne Abriel</a> -
+                    <a href="mailto:christian.hofer@student.uibk.ac.at">Christian Hofer</a> -
+                    <a href="mailto:jan.stuebner@student.uibk.ac.at">Jan Stübner</a>
+                    <a href="https://biergartenIBK.github.io/index.html">https://biergartenIBK.github.io/index.html</a>
         </p>
     </div>
 
@@ -48,7 +56,7 @@
 
         <p><strong>Tourdaten:</strong> Länge <span id="laenge"></span>m, tiefster Punkt <span id="tiefster_Punkt"></span>m, höchster Punkt <span id="hoechster_Punkt"></span>m, Aufstieg <span id="aufstieg"></span>m, Abstieg <span id="abstieg"></span>m.</p>
 
-        <div id="map"></div>
+        <div id="map"style="width:1150px; height:600px"></div>
 
         <h2>Wegbeschreibung</h2>
         <p>Von verschiedensten Möglichkeiten bietet sich vor allem der Gasthof Berchtoldshof (662m) in Hötting/Sadrach an. Zu Beginn noch auf einer asphaltierten Straße folgen Sie den Wegweisern in Richtung Buzzihütte und erreichen so den breiten Weg hinauf zum Rauschbrunnen. Abwechselnd, aber nie besonders steil gewinnen Sie im bunten Wald an Höhe. Dabei gibt es bereits immer wieder schöne Ausblicke auf die Umgebung von Innsbruck. Sie erreichen einen Forstweg, bleiben auf diesem aber nur ganz kurz und folgen nun wiederum einem Steig. In zahlreichen Serpentinen gewinnen Sie an Höhe. Das untere Ende einer freien Wiese kündigt das nahe Ziel an – nach insgesamt gut einer Stunde (420Hm) erreichen Sie das Ausflugsgasthaus Rauschbrunnen. Bei entsprechendem Wetter lassen Sie sich auf der Terrasse bewirten und genießen den einmaligen Ausblick auf Innsbruck, die umliegenden Dörfern, ins Wipptal, zu den Kalkkögeln usw..</p>
