--- a/indexUebersicht.html
+++ b/indexUebersicht.html
@@ -7,17 +7,17 @@
     <title>Biergarten am Berg - Almen sein super!</title><!-- TODO: Etappentitel einfügen -->
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="../js/leaflet.markercluster/MarkerCluster.css"/>
-    <link rel="stylesheet" href="../js/leaflet.markercluster/MarkerCluster.Default.css"/>
-    <link rel="stylesheet" href="../js/leaflet/leaflet.css" />
-    <script src="../js/leaflet/leaflet.js"></script>
-    <script src="../js/leaflet.markercluster/leaflet.markercluster.js"></script>
-    <link rel="stylesheet" href="../js/leaflet.fullscreen/dist/Leaflet.fullscreen.css" />
-    <script src="../js/leaflet.fullscreen/dist/Leaflet.fullscreen.js"></script>
-    <script src="../js/d3/d3.v3.min.js"></script>
-    <link rel="stylesheet" href="../js/leaflet.elevation/leaflet.elevation-0.0.4.css" />
-    <script type="text/javascript" src="../js/leaflet.elevation/leaflet.elevation-0.0.4.min.js"></script>
-    <script src="../js/leaflet.gpx/gpx.js"></script>
+    <link rel="stylesheet" href="../biergartenIBK.github.io/js/leaflet.markercluster/MarkerCluster.css"/>
+    <link rel="stylesheet" href="../biergartenIBK.github.io/js/leaflet.markercluster/MarkerCluster.Default.css"/>
+    <link rel="stylesheet" href="../biergartenIBK.github.io/js/leaflet/leaflet.css" />
+    <script src="../biergartenIBK.github.io/js/leaflet/leaflet.js"></script>
+    <script src="../biergartenIBK.github.io/js/leaflet.markercluster/leaflet.markercluster.js"></script>
+    <link rel="stylesheet" href="../biergartenIBK.github.io/js/leaflet.fullscreen/dist/Leaflet.fullscreen.css" />
+    <script src="../biergartenIBK.github.io/js/leaflet.fullscreen/dist/Leaflet.fullscreen.js"></script>
+    <script src="../biergartenIBK.github.io/js/d3/d3.v3.min.js"></script>
+    <link rel="stylesheet" href="../biergartenIBK.github.io/js/leaflet.elevation/leaflet.elevation-0.0.4.css" />
+    <script type="text/javascript" src="../biergartenIBK.github.io/js/leaflet.elevation/leaflet.elevation-0.0.4.min.js"></script>
+    <script src="../biergartenIBK.github.io/js/leaflet.gpx/gpx.js"></script>
 
     <link rel="stylesheet" href="styles.css" />
 
@@ -36,10 +36,12 @@
     </div>
 
     <div class="author">
-        <img src="images/user.jpg" alt="Ihr Reiseleiter" /><!-- TODO: anpassen -->
+        <img src="images/user.jpg" alt="Ihr Reiseleiter" />
         <p class="gray">
-            <a href="mailto:christian.hofer@student.uibk.ac.at">Christian Hofer</a> -<!-- TODO: anpassen -->
-            <a href="https://sagamol.github.io/biketirol/index.html">https://sagamol.github.io/biketirol/</a><!-- TODO: anpassen -->
+            <a href="mailto:marianne.abriel@student.uibk.ac.at">Marianne Abriel</a> -
+                    <a href="mailto:christian.hofer@student.uibk.ac.at">Christian Hofer</a> -
+                    <a href="mailto:jan.stuebner@student.uibk.ac.at">Jan Stübner</a>
+                    <a href="https://biergartenIBK.github.io/index.html">https://biergartenIBK.github.io/index.html</a>
         </p>
     </div>
 
