--- a/innsbruck_hoettingeralm.html
+++ b/innsbruck_hoettingeralm.html
@@ -8,18 +8,23 @@
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     
-    <link rel="stylesheet" href="../js/leaflet/leaflet.css" />
-    <script src="../js/leaflet/leaflet.js"></script>
-
-    <link rel="stylesheet" href="../js/leaflet.fullscreen/dist/Leaflet.fullscreen.css" />
-    <script src="../js/leaflet.fullscreen/dist/Leaflet.fullscreen.js"></script>
-   
-    <script src="../js/leaflet.gpx/gpx.js"></script>
+    <link rel="stylesheet" href="../biergartenIBK.github.io/js/leaflet/leaflet.css" />
+    <script src="../biergartenIBK.github.io/js/leaflet/leaflet.js"></script>
 
     <link rel="stylesheet" href="styles.css" />
-    <script src="../js/d3/d3.v3.min.js"></script>
-    <link rel="stylesheet" href="../js/leaflet.elevation/leaflet.elevation-0.0.4.css" />
-    <script type="text/javascript" src="../js/leaflet.elevation/leaflet.elevation-0.0.4.min.js"></script>
+
+    <link rel="stylesheet" href="../biergartenIBK.github.io/js/leaflet.fullscreen/dist/Leaflet.fullscreen.css" />
+    <script src="../biergartenIBK.github.io/js/leaflet.fullscreen/dist/Leaflet.fullscreen.js"></script>
+
+
+    <script src="../biergartenIBK.github.io/js/leaflet.gpx/gpx.js"></script>
+
+    <script src="../biergartenIBK.github.io/js/d3/d3.v3.min.js" charset="utf-8"></script>
+
+    <link rel="stylesheet" href="../biergartenIBK.github.io/js/leaflet.elevation/leaflet.elevation-0.0.4.css" />
+    <script src="../biergartenIBK.github.io/js/leaflet.elevation/leaflet.elevation-0.0.4.min.js"></script>
+    
+    <script type="text/javascript" src="../biergartenIBK.github.io/js/leaflet.gpx/gpx.js"></script>
     <script defer src="hoettingeralm.js"></script>
 
 </head>
@@ -33,8 +38,10 @@
     <div class="author">
         <img src="images/user.jpg" alt="Ihr Reiseleiter" /><!-- TODO: anpassen -->
         <p class="gray">
-            <a href="mailto:christian.hofer@student.uibk.ac.at">Christian Hofer</a> -<!-- TODO: anpassen -->
-            <a href="https://sagamol.github.io/biketirol/index.html">https://sagamol.github.io/biketirol/</a><!-- TODO: anpassen -->
+            <a href="mailto:marianne.abriel@student.uibk.ac.at">Marianne Abriel</a> -
+            <a href="mailto:christian.hofer@student.uibk.ac.at">Christian Hofer</a> -
+            <a href="mailto:jan.stuebner@student.uibk.ac.at">Jan Stübner</a>
+            <a href="https://biergartenIBK.github.io/index.html">https://biergartenIBK.github.io/index.html</a>
         </p>
     </div>
 
