Vernetzung zu den einzelnen Almen.htmls

--- a/indexUebersicht.html
+++ b/indexUebersicht.html
@@ -67,19 +67,19 @@
                 <a href="innsbruck_rauschbrunnen.html">Weg zum Rauschbrunnen</a> 
             </li>
             <li>
-                <a href="https://www.pillerseetal.co/gesundheit-wohlbefinden-pillerseetal">Weg zur Umbrückler Alm</a>
+                <a href="innsbruck_umbrueggleralm.html">Weg zur Umbrüggleralm</a>
             </li>
             <li>
-                <a href="https://www.bergfex.at/sommer/pillerseetal/highlights/">Weg zur Höttinger Alm</a>
+                <a href="innsbruck_hoettingeralm.html">Weg zur Höttinger Alm</a>
             </li>
             <li>
-                <a href="https://de.wikipedia.org/wiki/Pillerseetal">Weg zur Arzler Alm</a>
+                <a href="innsbruck_arzleralm.html">Weg zur Arzler Alm</a>
             </li>
             <li>
-                <a href="https://www.bergfex.at/sommer/pillerseetal/highlights/">Weg zur Bodensteinalm</a>
+                <a href="innsbruck_bodensteinalm.html">Weg zur Bodensteinalm</a>
             </li>
             <li>
-                <a href="https://de.wikipedia.org/wiki/Pillerseetal">Weg zur Rumer Alm</a>
+                <a href="innsbruck_rumeralm.html">Weg zur Rumer Alm</a>
             </li>
         </ul>
     </div>
