--- a/innsbruck_arzleralm.html
+++ b/innsbruck_arzleralm.html
@@ -51,14 +51,14 @@
     <div class="article">
         <h1>Innsbruck - Arzler Alm</h1>
 
-        <p>Die Stadt Innsbruck hat eine neue Alm: Zwischen 1979 und 2015 existierte die Umbrückler Alm gar nicht mehr. Das alte Almgebäude wurde abgetragen, da aufgrund der Baufälligkeit kein Pächter mehr gefunden wurde. Nach mehreren Planungen und Anläufen wurde schliesslich 2015 die neue Umbrückler Alm fertig gestellt. Sie befindet sich genau auf dem gleichen Platz der alten Alm. Die neue Umbrüggler Alm ist aber nicht mit der alten Alm vergleichbar: Es ist eine von einem Architekturbüro "durchgestylte" Alm, die sich möglichst gut in die Landschaft des Karwendel einbindet.</p>
+        <p>Die Arzler Alm liegt auf 1.067 Metern Seehöhe am Fuße der Nordkette. Sie ist von Innsbruck und dem Stadtteil Arzl aus auf einem einfachen Wanderweg erreichbar. Dank schöner Lage, kurzem Aufstieg und guter Küche ist sie bei Gästen und Einheimischen beliebt. Ob als Ziel einer spontanen After-Work-Wanderung oder als Zwischenstopp während einer größeren Tour. Im Sommer laden Liegestühle zum Sonne tanken ein. Bei schönem Wetter wird an manchen Tagen auch gegrillt. Sonst lockt die Standardkarte mit Knödelspezialitäten und anderen Köstlichkeiten. </p>
 
         <p><strong>Tourdaten:</strong> Länge <span id="laenge"></span>m, tiefster Punkt <span id="tiefster_Punkt"></span>m, höchster Punkt <span id="hoechster_Punkt"></span>m, Aufstieg <span id="aufstieg"></span>m, Abstieg <span id="abstieg"></span>m.</p>
 
         <div id="map"></div>
 
         <h2>Wegbeschreibung</h2>
-        <p>Wenige Höhenmeter sind ab der Hungerburg zu wandern. Hier zuerst auf dem Wanderweg 216 in Richtung Bodensteinhütte wandern, um dann links unter der Nordkettenbahn hindurch dem Wandersteig zur Umbrückler Alm zu folgen, ca. 300 Höhenmeter. </p>
+        <p>Am Waldsteig Nr. 218 in 30 Minuten oder entlang der Forststraße (Rosnerweg - Arzler Alm Weg) in 60 Minuten zur Arzler Alm.</p>
         <h3>Links</h3>
         <ul>
             <li>
