Wegbeschreibung dem gpxTrack angepasst

--- a/innsbruck_rauschbrunnen.html
+++ b/innsbruck_rauschbrunnen.html
@@ -59,7 +59,7 @@
         <div id="map"style="width:1150px; height:600px"></div>
 
         <h2>Wegbeschreibung</h2>
-        <p>Von verschiedensten Möglichkeiten bietet sich vor allem der Gasthof Berchtoldshof (662m) in Hötting/Sadrach an. Zu Beginn noch auf einer asphaltierten Straße folgen Sie den Wegweisern in Richtung Buzzihütte und erreichen so den breiten Weg hinauf zum Rauschbrunnen. Abwechselnd, aber nie besonders steil gewinnen Sie im bunten Wald an Höhe. Dabei gibt es bereits immer wieder schöne Ausblicke auf die Umgebung von Innsbruck. Sie erreichen einen Forstweg, bleiben auf diesem aber nur ganz kurz und folgen nun wiederum einem Steig. In zahlreichen Serpentinen gewinnen Sie an Höhe. Das untere Ende einer freien Wiese kündigt das nahe Ziel an – nach insgesamt gut einer Stunde (420Hm) erreichen Sie das Ausflugsgasthaus Rauschbrunnen. Bei entsprechendem Wetter lassen Sie sich auf der Terrasse bewirten und genießen den einmaligen Ausblick auf Innsbruck, die umliegenden Dörfern, ins Wipptal, zu den Kalkkögeln usw..</p>
+        <p>Von der Kreuzung entlang der schmalen Höttingergasse aufwärts Richtung Hötting/Zentrum und nach 390m links in die Schneeburggasse abbiegen und weiter Richtung Sadrach. Nach der Bushaltestelle Großer Gott bei Weggabelung rechts aufwärts nach Sadrach und nach 260m in Sadrach bei Weggabelung rechts entlang der Planötzenhofstraße aufwärts bis zum Planötzenhof. Gasthaus Planötzenhof am Parklatz geradeaus weiter bergauf Richtung Höttinger Bild. Bei Weggabelung links aufwärts Richtung "Alpengasthof Rauschbrunnen".</p>
         <h3>Links</h3>
         <ul>
             <li>
