GPXTrack Enzianhütte gefunden, einbauen

--- a/indexUebersicht.html
+++ b/indexUebersicht.html
@@ -81,6 +81,9 @@
             <li>
                 <a href="innsbruck_rumeralm.html">Weg zur Rumer Alm</a>
             </li>
+            <li>
+                <a href="innsbruck_enzianhuette.html">Weg zur Enzianhütte</a>
+            </li>
         </ul>
     </div>
 
