--- a/indexUebersicht.html
+++ b/indexUebersicht.html
@@ -34,7 +34,7 @@
         <h2 class="white">Almen auf der Nordkette</h2>
         <h3 class="white">Biergarten für Bewegungsenthusiasten</h3>
     </div>
-
+    
     <div class="author">
         <img src="images/user.jpg" alt="Ihr Reiseleiter" />
         <p class="gray">
@@ -43,6 +43,7 @@
                     <a href="mailto:jan.stuebner@student.uibk.ac.at">Jan Stübner</a>
                     <a href="https://biergartenIBK.github.io/index.html">https://biergartenIBK.github.io/index.html</a>
         </p>
+        <p><a href="https://pixabay.com/en/hut-mountain-hut-break-eat-drink-60426/">Bildquelle</a></p>
     </div>
 
     <hr />
