--- a/innsbruck_rauschbrunnen.html
+++ b/innsbruck_rauschbrunnen.html
@@ -44,6 +44,7 @@
                     <a href="mailto:jan.stuebner@student.uibk.ac.at">Jan Stübner</a>
                     <a href="https://biergartenIBK.github.io/index.html">https://biergartenIBK.github.io/index.html</a>
         </p>
+        <p><a href="https://pixabay.com/en/alpine-mountains-mountain-hut-3400788/">Bildquelle</a></p>
     </div>
 
     <hr />
@@ -82,15 +83,15 @@
         <table>
             <tr>
                 <td>
-                    <a class="back" href="indexc.html">
-                        <i class="fas fa-arrow-alt-circle-left"></i> Rumer Alm</a>
+                    <a class="back" href="innsbruck_enzianhuette.html">
+                        <i class="fas fa-arrow-alt-circle-left"></i> Enzianhütte</a>
                 </td>
                 <td>
                         <a class="up" href="indexUebersicht.html">
                             <i class="fas fa-arrow-alt-circle-up"></i> Übersicht Almen auf der Nordkette</a>
                     </td>
                     <td>
-                    <a class="next" href="indexa.html">
+                    <a class="next" href="innsbruck_hoettingeralm.html">
                         <i class="fas fa-arrow-alt-circle-right"></i> Höttinger Alm</a>
                 </td>
             </tr>
