--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     <a href="mailto:jan.stuebner@student.uibk.ac.at">Jan Stübner</a>
                     <a href="https://biergartenIBK.github.io/index.html">https://biergartenIBK.github.io/index.html</a>
                 </p>
+                <p><a href="https://pixabay.com/en/beer-garden-chairs-dining-tables-2456135/">Bildquelle</a></p>
             </div>
         
             <hr />
