--- a/innsbruck_umbrueggleralm.html
+++ b/innsbruck_umbrueggleralm.html
@@ -43,6 +43,7 @@
             <a href="mailto:jan.stuebner@student.uibk.ac.at">Jan Stübner</a>
             <a href="https://biergartenIBK.github.io/index.html">https://biergartenIBK.github.io/index.html</a>
         </p>
+        <p><a href="https://pixabay.com/en/alpine-mountains-mountain-hut-3400788/">Bildquelle</a></p>
     </div>
 
     <hr />
