--- a/innsbruck_bodensteinalm.html
+++ b/innsbruck_bodensteinalm.html
@@ -43,7 +43,9 @@
             <a href="mailto:jan.stuebner@student.uibk.ac.at">Jan Stübner</a>
             <a href="https://biergartenIBK.github.io/index.html">https://biergartenIBK.github.io/index.html</a>
         </p>
-        <p><a href="https://pixabay.com/en/alpine-mountains-mountain-hut-3400788/">Bildquelle</a></p>
+        <p><a href="https://pixabay.com/en/alpine-mountains-mountain-hut-3400788/">Bildquelle Foto</a> -
+            <a href="https://pixabay.com/en/froth-mug-beer-alcohol-beverage-307754/">Bildquelle Grafik</a>
+        </p>
     </div>
 
     <hr />
