--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <a href="mailto:jan.stuebner@student.uibk.ac.at">Jan Stübner</a>
                     <a href="https://biergartenIBK.github.io/index.html">https://biergartenIBK.github.io/index.html</a>
                 </p>
-                <p><a href="https://pixabay.com/en/beer-garden-chairs-dining-tables-2456135/">Bildquelle Foto</a> -
+                <p>Bilder entnommen aus: <a href="https://pixabay.com/en/beer-garden-chairs-dining-tables-2456135/">Bildquelle Foto</a> -
                     <a href="https://pixabay.com/en/froth-mug-beer-alcohol-beverage-307754/">Bildquelle Grafik</a>
                 </p>
             </div>
