Versuch an biergarten marker popup zu hängen

--- a/indexUebersicht.html
+++ b/indexUebersicht.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="../biergartenIBK.github.io/js/leaflet.elevation/leaflet.elevation-0.0.4.css" />
     <script type="text/javascript" src="../biergartenIBK.github.io/js/leaflet.elevation/leaflet.elevation-0.0.4.min.js"></script>
     <script src="../biergartenIBK.github.io/js/leaflet.gpx/gpx.js"></script>
-
+    <script defer src="almendata.js"></script>
     <link rel="stylesheet" href="styles.css" />
 
     <!-- <script src="../js/d3/d3.v3.min.js"></script> 
