--- a/innsbruck_rauschbrunnen.html
+++ b/innsbruck_rauschbrunnen.html
@@ -62,7 +62,7 @@
         <div id="map"style="width:1150px; height:600px"></div>
 
         <h2>Wegbeschreibung</h2>
-        <p>Von der Kreuzung entlang der schmalen Höttingergasse aufwärts Richtung Hötting/Zentrum und nach 390m links in die Schneeburggasse abbiegen und weiter Richtung Sadrach. Nach der Bushaltestelle Großer Gott bei Weggabelung rechts aufwärts nach Sadrach und nach 260m in Sadrach bei Weggabelung rechts entlang der Planötzenhofstraße aufwärts bis zum Planötzenhof. Gasthaus Planötzenhof am Parklatz geradeaus weiter bergauf Richtung Höttinger Bild. Bei Weggabelung links aufwärts Richtung "Alpengasthof Rauschbrunnen".</p>
+        <p><em>Blauer Weg: </em>Von der Kreuzung entlang der schmalen Höttingergasse aufwärts Richtung Hötting/Zentrum und nach 390m links in die Schneeburggasse abbiegen und weiter Richtung Sadrach. Nach der Bushaltestelle Großer Gott bei Weggabelung rechts aufwärts nach Sadrach und nach 260m in Sadrach bei Weggabelung rechts entlang der Planötzenhofstraße aufwärts bis zum Planötzenhof. Gasthaus Planötzenhof am Parklatz geradeaus weiter bergauf Richtung Höttinger Bild. Bei Weggabelung links aufwärts Richtung "Alpengasthof Rauschbrunnen".</p>
         <h3>Links</h3>
         <ul>
             <li>
