Text angepasst, Popups an die Icons gelegt

--- a/indexUebersicht.html
+++ b/indexUebersicht.html
@@ -60,7 +60,7 @@
         <div id="map"></div>
 
         <h2>Wege zu den einzelnen Almen</h2>
-        <p>Die GPX-Tracks zeigen Wege zu den einzelnen Almen. Auch andere Aufstiegsmöglichkeiten sind vorhanden.</p>
+        <p>Die GPX-Tracks zeigen Wege zu den einzelnen Almen. Auch andere Aufstiegsmöglichkeiten sind vorhanden. Um diese alternativen Wege zu den einzelnen Almen einsehen zu können klicken Sie auf den entsprechenden Link oder den entsprechenden Track in der Karte.</p>
         <h3>Links</h3>
         <ul>
             <li>
