--- a/innsbruck_rauschbrunnen.html
+++ b/innsbruck_rauschbrunnen.html
@@ -62,7 +62,7 @@
         <div id="map"></div>
 
         <h2>Wegbeschreibung</h2>
-        <p><em>Blauer Weg: </em>Von der Kreuzung entlang der schmalen Höttingergasse aufwärts Richtung Hötting/Zentrum und nach 390m links in die Schneeburggasse abbiegen und weiter Richtung Sadrach. Nach der Bushaltestelle Großer Gott bei Weggabelung rechts aufwärts nach Sadrach und nach 260m in Sadrach bei Weggabelung rechts entlang der Planötzenhofstraße aufwärts bis zum Planötzenhof. Gasthaus Planötzenhof am Parklatz geradeaus weiter bergauf Richtung Höttinger Bild. Bei Weggabelung links aufwärts Richtung "Alpengasthof Rauschbrunnen".</p>
+        <p>Die Informationen über der Karte geben unterschiedliche Parameter zum <em>"blauen Weg"</em> bekannt. Auch das Höhenprofil bezieht sich auf diesen Weg.<br/><em>"Blauer Weg": </em>Von der Kreuzung entlang der schmalen Höttingergasse aufwärts Richtung Hötting/Zentrum und nach 390m links in die Schneeburggasse abbiegen und weiter Richtung Sadrach. Nach der Bushaltestelle Großer Gott bei Weggabelung rechts aufwärts nach Sadrach und nach 260m in Sadrach bei Weggabelung rechts entlang der Planötzenhofstraße aufwärts bis zum Planötzenhof. Gasthaus Planötzenhof am Parklatz geradeaus weiter bergauf Richtung Höttinger Bild. Bei Weggabelung links aufwärts Richtung "Alpengasthof Rauschbrunnen".</p>
         <h3>Links</h3>
         <ul>
             <li>
