alle texte angepasst

--- a/innsbruck_bodensteinalm.html
+++ b/innsbruck_bodensteinalm.html
@@ -61,7 +61,7 @@
         <div id="map"></div>
 
         <h2>Wegbeschreibung</h2>
-        <p>Gemütliche Auffahrt durch den Stadtteil Mühlau zum Rechenhofweg. Kurz etwas steiler am Steinbruchweg und ab dem Rosnerweg, später Arzler Almweg, wieder gemütlich weiter zur Arzler Alm. Bis fast zur Bodenstein Alm in gleichbleibender Steigung weiter - nur das letzte Stück bis kurz vor die Alm ist wieder ziemlich steil. Herrliche Ausblicke auf die Stadt Innsbruck, ins Wipptal und Teile vom Inntal und zur Nordkette.</p>
+        <p>Die Informationen über der Karte geben unterschiedliche Parameter zum <em>"blauen Weg"</em> bekannt. Auch das Höhenprofil bezieht sich auf diesen Weg.<br/><em>"Blauer Weg": </em>Gemütliche Auffahrt durch den Stadtteil Mühlau zum Rechenhofweg. Kurz etwas steiler am Steinbruchweg und ab dem Rosnerweg, später Arzler Almweg, wieder gemütlich weiter zur Arzler Alm. Bis fast zur Bodenstein Alm in gleichbleibender Steigung weiter - nur das letzte Stück bis kurz vor die Alm ist wieder ziemlich steil. Herrliche Ausblicke auf die Stadt Innsbruck, ins Wipptal und Teile vom Inntal und zur Nordkette.</p>
         <h3>Links</h3>
         <ul>
             <li>
