--- a/innsbruck_enzianhuette.html
+++ b/innsbruck_enzianhuette.html
@@ -60,7 +60,7 @@
         <div id="map"></div>
 
         <h2>Wegbeschreibung</h2>
-        <p>Von der Parkplatzeinfahrt Richtung Norden auf Asphalt aufwärts. Kreuzung "Siebenwege" geradeaus aufwärts noch kurz auf Asphalt anschließend auf Schotter - "Rumeralmweg". Bei Weggabelung führt der linke Weg zur Enzianhütte.</p>
+        <p>Die Informationen über der Karte geben unterschiedliche Parameter zum <em>"blauen Weg"</em> bekannt. Auch das Höhenprofil bezieht sich auf diesen Weg.<br/><em>"Blauer Weg": </em>Von der Parkplatzeinfahrt Richtung Norden auf Asphalt aufwärts. Kreuzung "Siebenwege" geradeaus aufwärts noch kurz auf Asphalt anschließend auf Schotter - "Rumeralmweg". Bei Weggabelung führt der linke Weg zur Enzianhütte.</p>
         <h3>Links</h3>
         <ul>
             <li>
