--- a/innsbruck_arzleralm.html
+++ b/innsbruck_arzleralm.html
@@ -61,7 +61,7 @@
         <div id="map"></div>
 
         <h2>Wegbeschreibung</h2>
-        <p>Die Informationen über der Karte geben unterschiedliche Parameter zum <em>"blauen Weg"</em> bekannt. Auch das Höhenprofil bezieht sich auf diesen Weg.<br/><em>"Blauer Weg":</em> Am Waldsteig Nr. 218 in 30 Minuten oder entlang der Forststraße (Rosnerweg - Arzler Alm Weg) in 60 Minuten zur Arzler Alm.</p>
+        <p>Die Informationen über der Karte geben unterschiedliche Parameter zum <em>"blauen Weg"</em> bekannt. Auch das Höhenprofil bezieht sich auf diesen Weg.<br/>Die Farben der alternativen Wege haben keinerlei Bedeutung. Sie sind lediglich aufgrund der besseren optischen Unterscheidung andersfarbig.<br/><em>"Blauer Weg":</em> Am Waldsteig Nr. 218 in 30 Minuten oder entlang der Forststraße (Rosnerweg - Arzler Alm Weg) in 60 Minuten zur Arzler Alm.</p>
         <h3>Links</h3>
         <ul>
             <li>
