--- a/innsbruck_hoettingeralm.html
+++ b/innsbruck_hoettingeralm.html
@@ -61,7 +61,7 @@
         <div id="map"></div>
 
         <h2>Wegbeschreibung</h2>
-        <p>Die Informationen über der Karte geben unterschiedliche Parameter zum <em>"blauen Weg"</em> bekannt. Auch das Höhenprofil bezieht sich auf diesen Weg.<br/><em>"Blauer Weg": </em>Oberhalb der Talstation der Nordkettenbahn geht es ein kurzes Stück Richtung Nordosten durch die Siedlung und bei der ersten Kreuzung links aufwärts in den Wald. Kurz darauf den Rosnerweg queren und wieder auf einem Waldweg aufwärts. Abwechselnd durch Mischwald und Lichtungen zur Arzler Alm (1.067 Meter). Von dort gehen wir in Richtung Westen den Forstweg entlang. Biegen Sie bei der ersten großen Kreuzung rechts ab und folgen Sie der Beschilderung mit traumhaften Talblick bis zur Höttinger Alm (1487 Meter) . </p>
+        <p>Die Informationen über der Karte geben unterschiedliche Parameter zum <em>"blauen Weg"</em> bekannt. Auch das Höhenprofil bezieht sich auf diesen Weg.<br/>Die Farben der alternativen Wege haben keinerlei Bedeutung. Sie sind lediglich aufgrund der besseren optischen Unterscheidung andersfarbig.<br/><em>"Blauer Weg": </em>Oberhalb der Talstation der Nordkettenbahn geht es ein kurzes Stück Richtung Nordosten durch die Siedlung und bei der ersten Kreuzung links aufwärts in den Wald. Kurz darauf den Rosnerweg queren und wieder auf einem Waldweg aufwärts. Abwechselnd durch Mischwald und Lichtungen zur Arzler Alm (1.067 Meter). Von dort gehen wir in Richtung Westen den Forstweg entlang. Biegen Sie bei der ersten großen Kreuzung rechts ab und folgen Sie der Beschilderung mit traumhaften Talblick bis zur Höttinger Alm (1487 Meter) . </p>
         <h3>Links</h3>
         <ul>
             <li>
