--- a/innsbruck_umbrueggleralm.html
+++ b/innsbruck_umbrueggleralm.html
@@ -60,7 +60,7 @@
         <div id="map"></div>
 
         <h2>Wegbeschreibung</h2>
-        <p>Die Informationen über der Karte geben unterschiedliche Parameter zum <em>"blauen Weg"</em> bekannt. Auch das Höhenprofil bezieht sich auf diesen Weg.<br/><em>"Blauer Weg": </em>Wenige Höhenmeter sind ab der Hungerburg zu wandern. Hier zuerst auf dem Wanderweg 216 in Richtung Bodensteinhütte wandern, um dann links unter der Nordkettenbahn hindurch dem Wandersteig zur Umbrückler Alm zu folgen, ca. 300 Höhenmeter. </p>
+        <p>Die Informationen über der Karte geben unterschiedliche Parameter zum <em>"blauen Weg"</em> bekannt. Auch das Höhenprofil bezieht sich auf diesen Weg.<br/>Die Farben der alternativen Wege haben keinerlei Bedeutung. Sie sind lediglich aufgrund der besseren optischen Unterscheidung andersfarbig.<br/><em>"Blauer Weg": </em>Wenige Höhenmeter sind ab der Hungerburg zu wandern. Hier zuerst auf dem Wanderweg 216 in Richtung Bodensteinhütte wandern, um dann links unter der Nordkettenbahn hindurch dem Wandersteig zur Umbrückler Alm zu folgen, ca. 300 Höhenmeter. </p>
         <h3>Links</h3>
         <ul>
             <li>
