--- a/innsbruck_rumeralm.html
+++ b/innsbruck_rumeralm.html
@@ -60,7 +60,7 @@
         <div id="map"></div>
 
         <h2>Wegbeschreibung</h2>
-        <p>Die Informationen über der Karte geben unterschiedliche Parameter zum <em>"blauen Weg"</em> bekannt. Auch das Höhenprofil bezieht sich auf diesen Weg.<br/><em>"Blauer Weg": </em>Von der Parkplatzeinfahrt Richtung Norden auf Asphalt aufwärts. Kreuzung "Siebenwege" geradeaus aufwärts noch kurz auf Asphalt anschließend auf Schotter - "Rumeralmweg". Bei Weggabelung rechts aufwärts weiter (links führt der Weg zur Enzianhütte). Bei Weggabelung rechts aufwärts halten (links führt der Weg zur Arzler Alm). </p>
+        <p>Die Informationen über der Karte geben unterschiedliche Parameter zum <em>"blauen Weg"</em> bekannt. Auch das Höhenprofil bezieht sich auf diesen Weg.<br/>Die Farben der alternativen Wege haben keinerlei Bedeutung. Sie sind lediglich aufgrund der besseren optischen Unterscheidung andersfarbig.<br/><em>"Blauer Weg": </em>Von der Parkplatzeinfahrt Richtung Norden auf Asphalt aufwärts. Kreuzung "Siebenwege" geradeaus aufwärts noch kurz auf Asphalt anschließend auf Schotter - "Rumeralmweg". Bei Weggabelung rechts aufwärts weiter (links führt der Weg zur Enzianhütte). Bei Weggabelung rechts aufwärts halten (links führt der Weg zur Arzler Alm). </p>
         <h3>Links</h3>
         <ul>
             <li>
