--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../biergartenIBK.github.io/js/leaflet.markercluster/MarkerCluster.css"/>
     <link rel="stylesheet" href="../biergartenIBK.github.io/js/leaflet.markercluster/MarkerCluster.Default.css"/>
 
- />
+    <link rel="stylesheet" href="../biergartenIBK.github.io/js/leaflet.fullscreen/dist/leaflet.fullscreen.css"/>
     <script src="../biergartenIBK.github.io/js/leaflet.fullscreen/dist/Leaflet.fullscreen.js"></script>
     <script src="../biergartenIBK.github.io/js/leaflet.markercluster/leaflet.markercluster.js"></script>
     <script src="../biergartenIBK.github.io/js/leaflet.gpx/gpx.js"></script>
