alle fullscreen css neu

--- a/indexUebersicht.html
+++ b/indexUebersicht.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../biergartenIBK.github.io/js/leaflet/leaflet.css" />
     <script src="../biergartenIBK.github.io/js/leaflet/leaflet.js"></script>
     <script src="../biergartenIBK.github.io/js/leaflet.markercluster/leaflet.markercluster.js"></script>
-
+    <link rel="stylesheet" href="../biergartenIBK.github.io/js/leaflet.fullscreen/dist/leaflet.fullscreen.css"/>
     <script src="../biergartenIBK.github.io/js/leaflet.fullscreen/dist/Leaflet.fullscreen.js"></script>
     <script src="../biergartenIBK.github.io/js/d3/d3.v3.min.js"></script>
     <link rel="stylesheet" href="../biergartenIBK.github.io/js/leaflet.elevation/leaflet.elevation-0.0.4.css" />
